@@ -2,4 +2,8 @@
 [[tag type/auth]]
 
 By default, anonymous users cannot edit the wiki. This plugin allows
-anonymous web users, who have not signed in, to edit any page in the wiki.
+anonymous web users, who have not signed in, to edit any page in the wiki
+by default.
+
+The plugin also has a configuration setting, `anonok_pagespec`. This
+[[PageSpec]] can be used to allow anonymous editing of matching pages.
