@@ -8,6 +8,8 @@ ikiwiki (2.45) UNRELEASED; urgency=low
   * Add missing de.po. Closes: #471540
   * img: Support a title attribute, will be passed through to html.
     Closes: #478718
+  * anonk: Add anonok_pagespec configuration setting that can be used to
+    allow anonymous users to edit only matching pages. Closes: #478892
 
  -- Joey Hess <joeyh@debian.org>  Sat, 26 Apr 2008 15:09:36 -0400
 
